# egapro-api

./: .gitignore  .gitlab-ci.yml  404.html  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  entrypoint.sh  index.html  naf.csv  setup.cfg
.github/workflows/: ci.yaml
.k8s/: package.json
.k8s/components/: api.ts
.k8s/environments/_base/: api.ts
.k8s/environments/preprod/: api.ts
docs/: index.md
egapro/: __init__.py  bin.py  config.py  constants.py  db.py  dgt.py  emails.py  exporter.py  helpers.py  loggers.py  models.py  solen.py  tokens.py  utils.py  views.py
egapro/emails/: __init__.py  reply_to.yml
egapro/emails/objectives/: body.html  body.txt  subject.txt
egapro/emails/permalink/: body.txt
egapro/emails/success/: __init__.py  body.html  body.txt
egapro/migrations/: 002_ecart_augmentations.py  003_ecart_promotions.py  016_import_effectif_from_api_entreprises.py
egapro/pdf/: base.py  declaration.py
egapro/schema/: __init__.py  legacy.py  raw.yml  utils.py
egapro/sql/: create_appauth_table.sql  create_archive_table.sql  create_declaration_table.sql  create_ftdict.sql  create_indexes.sql  create_search_table.sql  create_simulation_table.sql  index_declaration.sql  init.sql  insert_declaration.sql  insert_draft_declaration.sql  public_declarations.sql  search.sql  search_stats.sql
search/: search_index.json
test/: conftest.py  test_db.py  test_email.py  test_exporter.py  test_ft.py  test_helpers.py  test_import_solen.py  test_legacy.py  test_models.py  test_schema.py  test_utils.py
test/api/: test_api.py  test_declaration.py  test_ownership.py  test_simulation.py
test/data/: solen_ues.xlsx
tests/: conftest.py  test_api.py  test_db.py  test_exporter.py  test_ft.py  test_import_solen.py  test_models.py  test_schema.py  test_utils.py
tests/data/: .~lock.solen_ues.xlsx#  solen_ues.xlsx
