[metadata]
name = egapro
version = 2021.05.25

[options]
packages = find:
include_package_data = True
install_requires =
    arrow==1.1.0
    asyncpg==0.22.0
    asyncstdlib==3.9.1
    fastjsonschema==2.15.0
    fpdf2==2.3.4
    france-naf==20210302
    httpx==0.18.1
    Jinja2==2.11.3
    # Needed to optimize XLSX writting by openpyxl.
    lxml==4.6.3
    minicli==0.5.0
    openpyxl==3.0.7
    progressist==0.1.0
    pyjwt==2.1.0
    python-stdnum==1.16
    PyYAML==5.4.1
    roll==0.12.4
    sentry-sdk==0.19.5
    ujson==1.35

[options.extras_require]
dev =
    black==20.8b1
    hupper==1.10.2
    mkdocs==1.1.2
test =
    coverage==5.5
    pytest==6.2.3
    pytest-asyncio==0.15.1
    pytest-cov==2.11.1
prod =
    gunicorn==20.0.4
    uvloop==0.15.2
    wheel==0.36.2


[options.entry_points]
console_scripts =
    egapro = egapro.bin:main


[coverage:run]
source = egapro
omit =
    egapro/bin.py

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    pragma: no cover
    def __repr__
