[metadata]
name = egapro
version = 2021.09.10

[options]
packages = find:
include_package_data = True
install_requires =
    arrow==1.2.0
    asyncpg==0.24.0
    asyncstdlib==3.10.1
    fastjsonschema==2.15.1
    fpdf2==2.3.5
    france-naf==20210302
    httpx==0.19.0
    Jinja2==3.0.2
    # Needed to optimize XLSX writting by openpyxl.
    lxml==4.6.3
    minicli==0.5.0
    openpyxl==3.0.9
    progressist==0.1.0
    pyjwt==2.2.0
    python-stdnum==1.17
    PyYAML==5.4.1
    roll==0.13.0
    sentry-sdk==1.1.0
    ujson==1.35

[options.extras_require]
dev =
    black==20.8b1
    hupper==1.10.3
    mkdocs==1.1.2
test =
    coverage==6.0.1
    pytest==6.2.5
    pytest-asyncio==0.15.1
    pytest-cov==3.0.0
prod =
    gunicorn==20.1.0
    uvloop==0.16.0
    wheel==0.37.0


[options.entry_points]
console_scripts =
    egapro = egapro.bin:main


[coverage:run]
source = egapro
omit =
    egapro/bin.py

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    pragma: no cover
    def __repr__
